fixed overflow issues

--- a/public/style.css
+++ b/public/style.css
@@ -1,10 +1,38 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap');
 html,
-body {
+body,
+.root {
 	width: 100vw;
 	height: 100vh;
 	margin: 0;
 	padding: 0;
+	overflow-x: hidden;
+}
+
+#navbar {
+	position: fixed;
+	top: 0;
+	box-sizing: border-box;
+	width: 100%;
+	padding: 1rem;
+	background-color: white;
+}
+#navbar-content {
+	width: 100%;
+	max-width: 1080px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	overflow: hidden;
+	margin: 0 auto;
+}
+
+.container {
+	box-sizing: border-box;
+	width: 100%;
+	max-width: 1080px;
+	margin: 100px auto 0 auto;
+	padding: 1rem;
 }
 
 /* TYPOGRAPHY */
@@ -54,6 +82,7 @@ h1 {
 
 /* CARDS */
 .card {
+	box-sizing: border-box;
 	width: 280px;
 	display: flex;
 	flex-direction: column;
@@ -82,6 +111,7 @@ h1 {
 }
 
 .snapscroll {
+	box-sizing: border-box;
 	padding: 1rem;
 	display: flex;
 	flex-direction: row;
@@ -129,41 +159,6 @@ h1 {
 }
 
 /* SECTIONS */
-
-#root {
-	margin: 100px 0 0 0;
-	padding: 0;
-	width: 100%;
-}
-section {
-	padding: 1rem;
-}
-
-.container {
-	min-width: 320px;
-	max-width: 1080px;
-	margin: 0 auto;
-}
-
-#navbar {
-	position: fixed;
-	top: 0;
-	background-color: white;
-	width: 100%;
-	display: flex;
-	justify-content: center;
-	overflow: hidden;
-}
-#navbar-content {
-	min-width: 320px;
-	max-width: 1081px;
-	min-height: 64px;
-	width: 100%;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	overflow: hidden;
-}
 
 #logo {
 	display: flex;
